modified tolist to collectors.tolist